# MoltenTerm

./: .gitignore  CMakeLists.txt  Makefile  README.md  flake.nix
.github/workflows/: build.yml
glad/: CMakeLists.txt
glad/include/glad/: gl.h
src/: CMakeLists.txt  magmaTerm.c  magmaTerm.h  main.c  moltenterm.h  util.h  window.c  window.h
